--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
   font-family:  "SourceSans", "Avenir", "Calibri", "Trebuchet MS", "Lucida Sans", sans-serif;
   font-size: 16px; 
   margin: 0px;
-  background: linear-gradient(180deg, rgb(22,22,28) 0%, rgb(30,30,35) 65%, rgb(10,10,10) 100%);
+  background: linear-gradient(180deg, rgb(25,25,30) 0%, rgb(35,35,40) 65%, rgb(10,10,10) 100%);
   background-color:#222;
   overscroll-behavior-y: contain;
 }
@@ -381,7 +381,7 @@ a.button.tinybutton > i {
 	border: 1px solid #555;
 	border-radius:16px;
 	max-height:30vh;
-	overflow-y:auto;
+	overflow-y:hideen;
   box-shadow:0px 20px 25px -25px rgb(128,128,128) inset;
 }
 
@@ -421,7 +421,7 @@ a.button.tinybutton > i {
 }
 
 #div_timer_inner {
-	width:80%;
+	width:75%;
 	height:auto;
 	margin:10px;
 	padding:10px;
@@ -435,7 +435,7 @@ a.button.tinybutton > i {
 
 #div_timer_controls_receiver {
   display:none;
-  width:70%;
+  width:75%;
   justify-content:flex-end;
 }
 
